--- a/index.html
+++ b/index.html
@@ -1864,6 +1864,7 @@ code{font-family:'DM Mono',monospace;font-size:.82em;color:var(--teal);backgroun
     <a href="stack.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">The Stack</a>
     <a href="services.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Services</a>
     <a href="https://github.com/yourhandle/pane" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub ↗</a>
+    <a href="https://github.com/yourhandle/pane/blob/main/LEGAL.md" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Your rights ↗</a>
   </div>
   <span class="ft-note">Not hiding. Just not waving.</span>
 </footer>
