--- a/index.html
+++ b/index.html
@@ -467,6 +467,9 @@ code{font-family:'DM Mono',monospace;font-size:.82em;color:var(--teal);backgroun
     <li><a href="index.html" style="color:var(--ink);">Why it matters</a></li>
     <li><a href="stack.html">The Stack</a></li>
     <li><a href="services.html">Services</a></li>
+    <li><a href="toolkit.html">Toolkit</a></li>
+    <li><a href="workflows.html">Workflows</a></li>
+    <li><a href="demo.html">Live Demo</a></li>
     <li><a href="#roadmap">Roadmap</a></li>
     <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
   </ul>
