--- a/services.html
+++ b/services.html
@@ -132,6 +132,9 @@ h1 em{font-style:italic;color:var(--teal);}
     <li><a href="index.html">Why it matters</a></li>
     <li><a href="stack.html">The Stack</a></li>
     <li><a href="services.html" class="active">Services</a></li>
+    <li><a href="toolkit.html">Toolkit</a></li>
+    <li><a href="workflows.html">Workflows</a></li>
+    <li><a href="demo.html">Live Demo</a></li>
     <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
   </ul>
 </nav>
