--- a/demo.html
+++ b/demo.html
@@ -195,7 +195,7 @@ nav{background:rgba(10,8,6,.95);backdrop-filter:blur(20px);border-bottom:1px sol
     <li><a href="stack.html">The Stack</a></li>
     <li><a href="toolkit.html">Toolkit</a></li>
     <li><a href="workflows.html">Workflows</a></li>
-    <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub &#8599;</a></li>
+    <li><a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener">GitHub &#8599;</a></li>
   </ul>
 </nav>
 
