--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ code{font-family:'DM Mono',monospace;font-size:.82em;color:var(--teal);backgroun
     <li><a href="workflows.html">Workflows</a></li>
     <li><a href="demo.html">Live Demo</a></li>
     <li><a href="#roadmap">Roadmap</a></li>
-    <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
+    <li><a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
   </ul>
 </nav>
 
@@ -1852,7 +1852,7 @@ code{font-family:'DM Mono',monospace;font-size:.82em;color:var(--teal);backgroun
       This is not a surveillance-free fantasy. It's the baseline that existed twenty years ago, that we surrendered incrementally, trade by trade, signup by signup, each one reasonable in isolation. pane doesn't promise to restore it completely. It promises to stop the bleeding — one alias, one card, one context at a time — until the infrastructure catches up with the intention.
     </p>
 
-    <a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener"
+    <a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener"
        style="display:inline-block;font-family:'DM Mono',monospace;font-size:.72rem;letter-spacing:.15em;text-transform:uppercase;color:#F5F0E8;background:transparent;border:1px solid #4A3C28;padding:1rem 2.2rem;border-radius:4px;text-decoration:none;transition:border-color .2s,color .2s;"
        onmouseover="this.style.borderColor='#C07840';this.style.color='#C07840';"
        onmouseout="this.style.borderColor='#4A3C28';this.style.color='#F5F0E8';">
@@ -1866,8 +1866,8 @@ code{font-family:'DM Mono',monospace;font-size:.82em;color:var(--teal);backgroun
   <div style="display:flex;gap:2rem;align-items:center;">
     <a href="stack.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">The Stack</a>
     <a href="services.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Services</a>
-    <a href="https://github.com/yourhandle/pane" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub ↗</a>
-    <a href="https://github.com/yourhandle/pane/blob/main/LEGAL.md" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Your rights ↗</a>
+    <a href="https://github.com/meldfunction/pane" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub ↗</a>
+    <a href="https://github.com/meldfunction/pane/blob/main/LEGAL.md" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Your rights ↗</a>
   </div>
   <span class="ft-note">Not hiding. Just not waving.</span>
 </footer>
