--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@ h1 em{font-style:italic;color:var(--teal);}
     <li><a href="toolkit.html">Toolkit</a></li>
     <li><a href="workflows.html">Workflows</a></li>
     <li><a href="demo.html">Live Demo</a></li>
-    <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
+    <li><a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
   </ul>
 </nav>
 
@@ -687,7 +687,7 @@ h1 em{font-style:italic;color:var(--teal);}
   <div style="display:flex;gap:2rem;">
     <a href="index.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Why it matters</a>
     <a href="stack.html" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">The Stack</a>
-    <a href="https://github.com/yourhandle/pane" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub ↗</a>
+    <a href="https://github.com/meldfunction/pane" target="_blank" style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub ↗</a>
   </div>
   <span style="font-family:'DM Mono',monospace;font-size:.72rem;color:var(--ink-faint);">Privacy is a right, not a feature.</span>
 </footer>
