--- a/stack.html
+++ b/stack.html
@@ -271,7 +271,7 @@ code{font-family:'DM Mono',monospace;font-size:.8em;color:var(--teal);background
     <li><a href="toolkit.html">Toolkit</a></li>
     <li><a href="workflows.html">Workflows</a></li>
     <li><a href="demo.html">Live Demo</a></li>
-    <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
+    <li><a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener">GitHub ↗</a></li>
   </ul>
 </nav>
 
