--- a/workflows.html
+++ b/workflows.html
@@ -154,7 +154,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     <li><a href="toolkit.html">Toolkit</a></li>
     <li><a href="workflows.html" class="active" style="color:var(--ink);">Workflows</a></li>
     <li><a href="demo.html">Live Demo</a></li>
-    <li><a href="https://github.com/yourhandle/pane" target="_blank" rel="noopener">GitHub &#8599;</a></li>
+    <li><a href="https://github.com/meldfunction/pane" target="_blank" rel="noopener">GitHub &#8599;</a></li>
   </ul>
 </nav>
 
@@ -215,7 +215,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
         </div>
         <div class="step-body">
           <p>Open a terminal. Clone pane into your home folder and install dependencies:</p>
-          <div class="code"><span class="ck">$</span> <span class="cs">git clone</span> https://github.com/yourhandle/pane ~/pane<br><span class="ck">$</span> cd ~/pane<br><span class="ck">$</span> <span class="cs">npm install</span></div>
+          <div class="code"><span class="ck">$</span> <span class="cs">git clone</span> https://github.com/meldfunction/pane ~/pane<br><span class="ck">$</span> cd ~/pane<br><span class="ck">$</span> <span class="cs">npm install</span></div>
           <p>This installs <code style="font-family:var(--mono);font-size:.85em;">dotenv</code> and <code style="font-family:var(--mono);font-size:.85em;">better-sqlite3</code>. No telemetry. Nothing phones home.</p>
           <div class="tip"><strong>VPN first:</strong> Before cloning or creating any accounts, connect your VPN. The IP you use when creating Addy.io and Privacy.com accounts will be logged by those services.</div>
           <button class="check-btn" onclick="markDone(this)">&#10003; Done</button>
@@ -327,7 +327,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back to workflows</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md" target="_blank" class="wf-next">Full WORKFLOWS.md &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md" target="_blank" class="wf-next">Full WORKFLOWS.md &#8599;</a>
     </div>
   </div>
 </div>
@@ -382,7 +382,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md#4-your-first-alias--newsletter-or-saas-trial" target="_blank" class="wf-next">Full guide &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md#4-your-first-alias--newsletter-or-saas-trial" target="_blank" class="wf-next">Full guide &#8599;</a>
     </div>
   </div>
 </div>
@@ -438,7 +438,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md" target="_blank" class="wf-next">Full guide &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md" target="_blank" class="wf-next">Full guide &#8599;</a>
     </div>
   </div>
 </div>
@@ -501,7 +501,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md#8-the-placeholder-account-workflow" target="_blank" class="wf-next">Full guide &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md#8-the-placeholder-account-workflow" target="_blank" class="wf-next">Full guide &#8599;</a>
     </div>
   </div>
 </div>
@@ -531,7 +531,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md#3-standalone-cli-no-ai" target="_blank" class="wf-next">Full guide &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md#3-standalone-cli-no-ai" target="_blank" class="wf-next">Full guide &#8599;</a>
     </div>
   </div>
 </div>
@@ -547,7 +547,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
       <div class="step" onclick="toggleStep(this)">
         <div class="step-head"><div class="step-num">1</div><div class="step-title">Read AGENTS.md before starting</div><span class="step-badge sb-req">required</span><span class="step-caret">&#9654;</span></div>
         <div class="step-body">
-          <div class="tip"><strong>Read first:</strong> <a href="https://github.com/yourhandle/pane/blob/main/AGENTS.md" target="_blank" style="color:var(--amber);">AGENTS.md</a> contains the full security model, jurisdiction table, E2E coverage map, and hosting checklist. This workflow assumes you have read it.</div>
+          <div class="tip"><strong>Read first:</strong> <a href="https://github.com/meldfunction/pane/blob/main/AGENTS.md" target="_blank" style="color:var(--amber);">AGENTS.md</a> contains the full security model, jurisdiction table, E2E coverage map, and hosting checklist. This workflow assumes you have read it.</div>
           <p>This workflow is for journalists, activists, and anyone whose physical safety depends on separating their device from their account management. It is not for casual use.</p>
           <button class="check-btn" onclick="markDone(this)">&#10003; Read AGENTS.md</button>
         </div>
@@ -556,7 +556,7 @@ footer{padding:2.5rem 3rem;border-top:1px solid var(--fog);display:flex;justify-
         <div class="step-head"><div class="step-num">2</div><div class="step-title">Set up an agent server in a privacy-respecting jurisdiction</div><span class="step-badge sb-req">required</span><span class="step-caret">&#9654;</span></div>
         <div class="step-body">
           <p>Provision a VPS in Iceland (1984 Hosting, Flokinet) or Switzerland (Infomaniak). Pay with Monero if possible. SSH key auth only.</p>
-          <div class="code"><span class="cc"># On the agent server</span><br><span class="ck">$</span> git clone https://github.com/yourhandle/pane /opt/pane<br><span class="ck">$</span> openssl rand -hex 32<br><span class="cs">  8f3a9c2d...  &#8592; your AGENT_SECRET, store it</span><br><br><span class="ck">$</span> echo "AGENT_SECRET=8f3a9c2d..." &gt; /opt/pane/.env<br><span class="ck">$</span> echo "ADDY_API_KEY=your_key" &gt;&gt; /opt/pane/.env<br><span class="ck">$</span> chmod 600 /opt/pane/.env<br><br><span class="ck">$</span> python3 /opt/pane/pane-agent.py monitor &amp;</div>
+          <div class="code"><span class="cc"># On the agent server</span><br><span class="ck">$</span> git clone https://github.com/meldfunction/pane /opt/pane<br><span class="ck">$</span> openssl rand -hex 32<br><span class="cs">  8f3a9c2d...  &#8592; your AGENT_SECRET, store it</span><br><br><span class="ck">$</span> echo "AGENT_SECRET=8f3a9c2d..." &gt; /opt/pane/.env<br><span class="ck">$</span> echo "ADDY_API_KEY=your_key" &gt;&gt; /opt/pane/.env<br><span class="ck">$</span> chmod 600 /opt/pane/.env<br><br><span class="ck">$</span> python3 /opt/pane/pane-agent.py monitor &amp;</div>
           <button class="check-btn" onclick="markDone(this)">&#10003; Agent running</button>
         </div>
       </div>
@@ -600,7 +600,7 @@ Your device never touched the publication platform.</div>
     </div>
     <div class="wf-nav">
       <button class="wf-back" onclick="showPicker()">&#8592; Back</button>
-      <a href="https://github.com/yourhandle/pane/blob/main/AGENTS.md" target="_blank" class="wf-next">Full AGENTS.md &#8599;</a>
+      <a href="https://github.com/meldfunction/pane/blob/main/AGENTS.md" target="_blank" class="wf-next">Full AGENTS.md &#8599;</a>
     </div>
   </div>
 </div>
@@ -611,12 +611,12 @@ Your device never touched the publication platform.</div>
     <div class="sl">Go deeper</div>
     <h2 class="st">Related files<br><em>&amp; documentation</em></h2>
     <div class="link-grid">
-      <a href="https://github.com/yourhandle/pane/blob/main/WORKFLOWS.md" target="_blank" class="link-card">
+      <a href="https://github.com/meldfunction/pane/blob/main/WORKFLOWS.md" target="_blank" class="link-card">
         <div class="lc-label">Full guide</div>
         <div class="lc-title">WORKFLOWS.md</div>
         <div class="lc-sub">All 10 workflows in full detail, including the alias map, VPN setup, and HMAC command signing for the agent.</div>
       </a>
-      <a href="https://github.com/yourhandle/pane/blob/main/AGENTS.md" target="_blank" class="link-card">
+      <a href="https://github.com/meldfunction/pane/blob/main/AGENTS.md" target="_blank" class="link-card">
         <div class="lc-label">Security model</div>
         <div class="lc-title">AGENTS.md</div>
         <div class="lc-sub">E2E coverage map, jurisdiction table, placeholder workflow, full Python agent prototype, and hosting checklist.</div>
@@ -652,7 +652,7 @@ Your device never touched the publication platform.</div>
     <a href="stack.html" style="font-family:var(--mono);font-size:.68rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">The Stack</a>
     <a href="services.html" style="font-family:var(--mono);font-size:.68rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Services</a>
     <a href="toolkit.html" style="font-family:var(--mono);font-size:.68rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">Toolkit</a>
-    <a href="https://github.com/yourhandle/pane" target="_blank" style="font-family:var(--mono);font-size:.68rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub &#8599;</a>
+    <a href="https://github.com/meldfunction/pane" target="_blank" style="font-family:var(--mono);font-size:.68rem;color:var(--ink-faint);text-decoration:none;letter-spacing:.08em;text-transform:uppercase;">GitHub &#8599;</a>
   </div>
   <span class="ft-n">Not hiding. Just not waving.</span>
 </footer>
